--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+@import "colors.css";
+
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  background-color: var(--main-bg-color);
+}
